--- a/package.json
+++ b/package.json
@@ -2,36 +2,13 @@
   "name": "1-github-finder",
   "version": "0.1.8",
   "private": true,
+  "packageManager": "yarn@3.4.1",
   "dependencies": {
-    "acorn": "^7.1.1",
     "axios": "^0.21.1",
-    "elliptic": "^6.5.3",
-    "eslint-utils": "^1.4.2",
-    "minimist": "^1.2.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "serialize-javascript": "^3.1.0"
-  },
-  "resolutions": {
-    "kind-of": "^6.0.3",
-    "dot-prop": "^5.1.1",
-    "elliptic": "^6.5.3",
-    "lodash": "^4.17.21",
-    "node-forge": "^0.10.0",
-    "node-notifier": "^8.0.1",
-    "yargs-parser": "^13.1.2",
-    "http-proxy": "1.18.1",
-    "object-path": "^0.11.5",
-    "ini": "^1.3.8",
-    "immer": "^8.0.1",
-    "ssri": "^8.0.1",
-    "is-svg": "^4.2.2",
-    "react-dev-utils": "^11.0.4",
-    "hosted-git-info": "^2.8.9",
-    "url-parse": "^1.5.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +22,9 @@
     "deploy": "./deploy.sh"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app"
+    ]
   },
   "browserslist": {
     "production": [
